--- a/bin_comparison_2.ipynb
+++ b/bin_comparison_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e747c30c",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,6 @@
     "import numpy as np\n",
     "import scipy\n",
     "from scipy.optimize.elementwise import find_root\n",
-    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -856,7 +855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
