Implemented spin distribution hyperparameters sampler
Also done some minor cleaning to the code

--- a/pdet_gwbench.ipynb
+++ b/pdet_gwbench.ipynb
@@ -307,7 +307,8 @@
     "            # Initialize checkpoint file.\n",
     "            # n_sample and completed_tasks are not arrays, therefore you will need to int() the 0-dim array associated with them while reading the file\n",
     "            logging.info(f\"Initializing checkpoint file at {checkpoint_file_path}.\")\n",
-    "            np.savez(checkpoint_file_path, m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant, meshgrid=meshgrid, meshcoord=meshcoord, n_sample=n_sample, meshvalues=meshvalues, completed_tasks=completed_tasks)\n",
+    "            np.savez(checkpoint_file_path, m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant,\n",
+    "                     meshgrid=meshgrid, meshcoord=meshcoord, n_sample=n_sample, meshvalues=meshvalues, completed_tasks=completed_tasks)\n",
     "            logging.info(f\"Checkpoint file created at {checkpoint_file_path}.\")\n",
     "            \n",
     "            # Compute and save the meshvalues for each chunk\n",
@@ -318,7 +319,8 @@
     "                mvalues = np.array(Parallel(n_jobs=n_jobs, verbose=verbose)(delayed(pdet)(m1, m2, z, n_samples=n_sample, n_jobs=1) for m1, m2, z in mgrid))\n",
     "                meshvalues = np.concatenate((meshvalues, mvalues))\n",
     "                completed_tasks += len(mgrid)\n",
-    "                np.savez(checkpoint_file_path, m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant, meshgrid=meshgrid, meshcoord=meshcoord, n_sample=n_sample, meshvalues=meshvalues, completed_tasks=completed_tasks)\n",
+    "                np.savez(checkpoint_file_path, m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant,\n",
+    "                         meshgrid=meshgrid, meshcoord=meshcoord, n_sample=n_sample, meshvalues=meshvalues, completed_tasks=completed_tasks)\n",
     "                logging.info(\"Chunk completed. Progress saved.\")\n",
     "\n",
     "            logging.info(\"Computation completed.\")\n",
@@ -370,7 +372,8 @@
     "            mvalues = np.array(Parallel(n_jobs=n_jobs, verbose=verbose)(delayed(pdet)(m1, m2, z, n_samples=n_sample, n_jobs=1) for m1, m2, z in mgrid))\n",
     "            meshvalues = np.concatenate((meshvalues, mvalues))\n",
     "            completed_tasks += len(mgrid)\n",
-    "            np.savez(checkpoint_file_path, m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant, meshgrid=meshgrid, meshcoord=meshcoord, n_sample=n_sample, meshvalues=meshvalues, completed_tasks=completed_tasks)\n",
+    "            np.savez(checkpoint_file_path, m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant,\n",
+    "                     meshgrid=meshgrid, meshcoord=meshcoord, n_sample=n_sample, meshvalues=meshvalues, completed_tasks=completed_tasks)\n",
     "            logging.info(\"Chunk completed. Progress saved.\")\n",
     "\n",
     "        logging.info(\"Computation completed.\")\n",
@@ -381,11 +384,18 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b4e1c469-96f2-4eac-9e7f-fe3812318714",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "898af59e-5689-4b93-ac78-a081dbc5de9f",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "meshvalues = compute_pdet_for_interpolant(meshgrid, meshcoord, m1grid, m2grid, zgrid, pdet_for_interpolant, n_sample=1e2, save_checkpoint=True, save_step=75, checkpoint_file_path=\"data/pdet_computation_checkpoint.npz\", from_checkpoint=False)"
+    "meshvalues = compute_pdet_for_interpolant(meshgrid, meshcoord, m1grid, m2grid, zgrid, pdet_for_interpolant,\n",
+    "                                          n_sample=1e2,\n",
+    "                                          save_checkpoint=True,\n",
+    "                                          save_step=75,\n",
+    "                                          checkpoint_file_path=\"data/pdet_computation_checkpoint.npz\",\n",
+    "                                          from_checkpoint=False)"
    ]
   },
   {
