--- a/pdet_gwbench.ipynb
+++ b/pdet_gwbench.ipynb
@@ -164,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0008"
+       "0.001"
       ]
      },
      "execution_count": 2,
@@ -322,7 +322,7 @@
    "id": "969dd614-8d07-4a35-9f00-7f44b95bbd4f",
    "metadata": {},
    "source": [
-    "np.savez(\"data/pdet_nsamples_5e2_(attempt_4)\", m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant)"
+    "np.savez_compressed(\"data/pdet_nsamples_5e2_(attempt_4)\", m1grid=m1grid, m2grid=m2grid, zgrid=zgrid, pdet_for_interpolant=pdet_for_interpolant)"
    ]
   },
   {
@@ -466,9 +466,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_438996/3913403867.py:1: RuntimeWarning: divide by zero encountered in divide\n",
+      "/tmp/ipykernel_440037/3913403867.py:1: RuntimeWarning: divide by zero encountered in divide\n",
       "  rel_err = residuals / pdet_test\n",
-      "/tmp/ipykernel_438996/3913403867.py:1: RuntimeWarning: invalid value encountered in divide\n",
+      "/tmp/ipykernel_440037/3913403867.py:1: RuntimeWarning: invalid value encountered in divide\n",
       "  rel_err = residuals / pdet_test\n"
      ]
     },
