--- a/MetalCosfr_cp_for_STM_analysis-main/analysis/my_plots.ipynb
+++ b/MetalCosfr_cp_for_STM_analysis-main/analysis/my_plots.ipynb
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [01:05<00:00, 45.55it/s]\n"
+      "100%|██████████| 3000/3000 [01:04<00:00, 46.23it/s]\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "4acaa7bc",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
     "\n",
     "ax.legend(loc='lower right', frameon=False, reverse=True)\n",
     "\n",
-    "fig.savefig(\"Mf_zt\")\n",
+    "fig.savefig(\"../../paper/images/Mf_zt\")\n",
     "\n",
     "plt.show()"
    ]
