--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -480,4 +480,193 @@
   publisher = {Oxford University Press (OUP)},
 }
 
+@Article{Chruslinska2020,
+  author    = {Chruślińska, M. and Jeřábková, T. and Nelemans, G. and Yan, Z.},
+  journal   = {Astronomy &amp; Astrophysics},
+  title     = {The effect of the environment-dependent IMF on the formation and metallicities of stars over the cosmic history},
+  year      = {2020},
+  issn      = {1432-0746},
+  month     = apr,
+  pages     = {A10},
+  volume    = {636},
+  doi       = {10.1051/0004-6361/202037688},
+  publisher = {EDP Sciences},
+}
+
+@Article{Boco2021,
+  author    = {Boco, L. and Lapi, A. and Chruslinska, M. and Donevski, D. and Sicilia, A. and Danese, L.},
+  journal   = {The Astrophysical Journal},
+  title     = {Evolution of Galaxy Star Formation and Metallicity: Impact on Double Compact Object Mergers},
+  year      = {2021},
+  issn      = {1538-4357},
+  month     = feb,
+  number    = {2},
+  pages     = {110},
+  volume    = {907},
+  doi       = {10.3847/1538-4357/abd3a0},
+  publisher = {American Astronomical Society},
+}
+
+@Article{Woosley2002,
+  author    = {Woosley, S. E. and Heger, A. and Weaver, T. A.},
+  journal   = {Reviews of Modern Physics},
+  title     = {The evolution and explosion of massive stars},
+  year      = {2002},
+  issn      = {1539-0756},
+  month     = nov,
+  number    = {4},
+  pages     = {1015--1071},
+  volume    = {74},
+  doi       = {10.1103/revmodphys.74.1015},
+  publisher = {American Physical Society (APS)},
+}
+
+@Article{Heger2003,
+  author    = {Heger, A. and Fryer, C. L. and Woosley, S. E. and Langer, N. and Hartmann, D. H.},
+  journal   = {The Astrophysical Journal},
+  title     = {How Massive Single Stars End Their Life},
+  year      = {2003},
+  issn      = {1538-4357},
+  month     = jul,
+  number    = {1},
+  pages     = {288--300},
+  volume    = {591},
+  doi       = {10.1086/375341},
+  publisher = {American Astronomical Society},
+}
+
+@Misc{Katz2022,
+  author    = {Katz, Harley and Liu, Shenghua and Kimm, Taysun and Rey, Martin P. and Andersson, Eric P. and Cameron, Alex J. and Rodriguez-Montero, Francisco and Agertz, Oscar and Devriendt, Julien and Slyz, Adrianne},
+  title     = {PRISM: A Non-Equilibrium, Multiphase Interstellar Medium Model for Radiation Hydrodynamics Simulations of Galaxies},
+  year      = {2022},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  doi       = {10.48550/ARXIV.2211.04626},
+  keywords  = {Astrophysics of Galaxies (astro-ph.GA), FOS: Physical sciences, FOS: Physical sciences},
+  publisher = {arXiv},
+}
+
+@Article{Sharda2022,
+  author    = {Sharda, Piyush and Amarsi, Anish M and Grasha, Kathryn and Krumholz, Mark R and Yong, David and Chiaki, Gen and Roy, Arpita and Nordlander, Thomas},
+  journal   = {Monthly Notices of the Royal Astronomical Society},
+  title     = {The impact of carbon and oxygen abundances on the metal-poor initial mass function},
+  year      = {2022},
+  issn      = {1365-2966},
+  month     = nov,
+  number    = {3},
+  pages     = {3985--3998},
+  volume    = {518},
+  doi       = {10.1093/mnras/stac3315},
+  publisher = {Oxford University Press (OUP)},
+}
+
+@Article{Nomoto1997,
+  author    = {Nomoto, K. and Iwamoto, K. and Nakasato, N. and Thielemann, F.-K. and Brachwitz, F. and Tsujimoto, T. and Kubo, Y. and Kishimoto, N.},
+  journal   = {Nuclear Physics A},
+  title     = {Nucleosynthesis in type Ia supernovae},
+  year      = {1997},
+  issn      = {0375-9474},
+  month     = aug,
+  number    = {1–2},
+  pages     = {467--476},
+  volume    = {621},
+  doi       = {10.1016/s0375-9474(97)00291-1},
+  publisher = {Elsevier BV},
+}
+
+@Article{Kobayashi2020,
+  author    = {Kobayashi, Chiaki and Leung, Shing-Chi and Nomoto, Ken’ichi},
+  journal   = {The Astrophysical Journal},
+  title     = {New Type Ia Supernova Yields and the Manganese and Nickel Problems in the Milky Way and Dwarf Spheroidal Galaxies},
+  year      = {2020},
+  issn      = {1538-4357},
+  month     = jun,
+  number    = {2},
+  pages     = {138},
+  volume    = {895},
+  doi       = {10.3847/1538-4357/ab8e44},
+  publisher = {American Astronomical Society},
+}
+
+@Article{Vink2005,
+  author    = {Vink, Jorick S. and de Koter, A.},
+  journal   = {Astronomy &amp; Astrophysics},
+  title     = {On the metallicity dependence of Wolf-Rayet winds},
+  year      = {2005},
+  issn      = {1432-0746},
+  month     = oct,
+  number    = {2},
+  pages     = {587--596},
+  volume    = {442},
+  doi       = {10.1051/0004-6361:20052862},
+  publisher = {EDP Sciences},
+}
+
+@Article{Sander2020,
+  author    = {Sander, Andreas A C and Vink, Jorick S},
+  journal   = {Monthly Notices of the Royal Astronomical Society},
+  title     = {On the nature of massive helium star winds and Wolf–Rayet-type mass-loss},
+  year      = {2020},
+  issn      = {1365-2966},
+  month     = oct,
+  number    = {1},
+  pages     = {873--892},
+  volume    = {499},
+  doi       = {10.1093/mnras/staa2712},
+  publisher = {Oxford University Press (OUP)},
+}
+
+@Article{Bjoerklund2023,
+  author    = {Björklund, R. and Sundqvist, J. O. and Singh, S. M. and Puls, J. and Najarro, F.},
+  journal   = {Astronomy &amp; Astrophysics},
+  title     = {New predictions for radiation-driven, steady-state mass-loss and wind-momentum from hot, massive stars: III. Updated mass-loss rates for stellar evolution},
+  year      = {2023},
+  issn      = {1432-0746},
+  month     = aug,
+  pages     = {A109},
+  volume    = {676},
+  doi       = {10.1051/0004-6361/202141948},
+  publisher = {EDP Sciences},
+}
+
+@Article{Greggio2005,
+  author    = {Greggio, L.},
+  journal   = {Astronomy &amp; Astrophysics},
+  title     = {The rates of type Ia supernovae: I. Analytical formulations},
+  year      = {2005},
+  issn      = {1432-0746},
+  month     = sep,
+  number    = {3},
+  pages     = {1055--1078},
+  volume    = {441},
+  doi       = {10.1051/0004-6361:20052926},
+  publisher = {EDP Sciences},
+}
+
+@Article{Maoz2012,
+  author    = {Maoz, D. and Mannucci, F.},
+  journal   = {Publications of the Astronomical Society of Australia},
+  title     = {Type-Ia Supernova Rates and the Progenitor Problem: A Review},
+  year      = {2012},
+  issn      = {1448-6083},
+  number    = {4},
+  pages     = {447--465},
+  volume    = {29},
+  doi       = {10.1071/as11052},
+  publisher = {Cambridge University Press (CUP)},
+}
+
+@Article{Maoz2014,
+  author    = {Maoz, Dan and Mannucci, Filippo and Nelemans, Gijs},
+  journal   = {Annual Review of Astronomy and Astrophysics},
+  title     = {Observational Clues to the Progenitors of Type Ia Supernovae},
+  year      = {2014},
+  issn      = {1545-4282},
+  month     = aug,
+  number    = {1},
+  pages     = {107--170},
+  volume    = {52},
+  doi       = {10.1146/annurev-astro-082812-141031},
+  publisher = {Annual Reviews},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
